Add moving window to linear results, try online calibration for old datasets

--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -847,15 +847,15 @@
     "\n",
     "###### NEW\n",
     "plot_dict = [\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_1\"},\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_2\"},\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_3\"},\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_4\"},\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_5\"},\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_6\"},\n",
-    "    #{\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_17\", \"end_distance\":7},\n",
-    "    #{\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_18\", \"end_distance\":7},\n",
-    "    #{\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_19\", \"end_distance\":7},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_1\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_2\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_3\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_4\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_5\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_6\"},\n",
+    "    {\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_17\"},\n",
+    "    {\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_18\"},\n",
+    "    {\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_19\"},\n",
     "    #{\"exp_name\": \"2021_07_27_manual\", \"motors\": 0, \"appendix\":\"\", \"end_distance\":15},\n",
     "    #{\"exp_name\": \"2021_07_27_manual\", \"motors\": 0, \"appendix\":\"_3\", \"end_distance\":15},\n",
     "    #{\"exp_name\": \"2021_07_27_manual\", \"motors\": 0, \"appendix\":\"_4\", \"end_distance\":15},\n",
@@ -1056,12 +1056,15 @@
     "#bad_freqs = [[3500, 3900]]\n",
     "\n",
     "plot_dict = [\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_1\"},\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_2\"},\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_3\"},\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_4\"},\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_5\"},\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_6\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_1\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_2\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_3\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_4\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_5\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_6\"},\n",
+    "    {\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_17\"},\n",
+    "    {\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_18\"},\n",
+    "    {\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_19\"},\n",
     "]\n",
     "\n",
     "errors_df = pd.DataFrame(\n",
@@ -1156,10 +1159,11 @@
     "                inf_machine.add_data(\n",
     "                    values_unsorted_calib[i],\n",
     "                    yvalues,\n",
-    "                    #distances=-np.linspace(0, rel_dist, len(yvalues)),\n",
+    "                    distances=-np.linspace(0, rel_dist, len(yvalues)),\n",
     "                )\n",
+    "                \n",
     "                # TODO(FD) check again if this helps...\n",
-    "                inf_machine.filter_out_freqs(freq_ranges=bad_freqs)\n",
+    "                # inf_machine.filter_out_freqs(freq_ranges=bad_freqs)\n",
     "\n",
     "                inf_machine.add_geometry([dists_cm[0], dists_cm[-1]], WALL_ANGLE_DEG)\n",
     "                \n",
@@ -1225,9 +1229,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fname = '../experiments/2021_10_12_flying/results.pkl'\n",
-    "#errors_df.to_pickle(fname)\n",
-    "#print('saved as', fname)"
+    "fname = f'../experiments/{exp_name}/results.pkl'\n",
+    "errors_df.to_pickle(fname)\n",
+    "print('saved as', fname)"
    ]
   },
   {
@@ -1257,7 +1261,8 @@
    "source": [
     "from plotting_tools import plot_performance, save_fig\n",
     "\n",
-    "exp_name = '2021_10_12_flying'\n",
+    "#exp_name = '2021_10_12_flying'\n",
+    "\n",
     "fname = f'../experiments/{exp_name}/results.pkl'\n",
     "errors_df = pd.read_pickle(fname)\n",
     "\n",
