Create first working version of WallDetector

--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -1056,15 +1056,15 @@
     "#bad_freqs = [[3500, 3900]]\n",
     "\n",
     "plot_dict = [\n",
-    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_1\"},\n",
+    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_1\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_2\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_3\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_4\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_5\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_6\"},\n",
-    "    {\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_17\"},\n",
-    "    {\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_18\"},\n",
-    "    {\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_19\"},\n",
+    "    #{\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_17\"},\n",
+    "    #{\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_18\"},\n",
+    "    #{\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_19\"},\n",
     "]\n",
     "\n",
     "errors_df = pd.DataFrame(\n",
@@ -1119,6 +1119,7 @@
     "\n",
     "    inf_machine = Inference()\n",
     "    dists_cm = DistanceEstimator.DISTANCES_M * 1e2\n",
+    "    inf_machine.add_geometry([dists_cm[0], dists_cm[-1]], WALL_ANGLE_DEG)\n",
     "\n",
     "    for calib_method in calib_method_list:\n",
     "        if calib_method == \"on_the_fly\":\n",
@@ -1164,15 +1165,13 @@
     "                \n",
     "                # TODO(FD) check again if this helps...\n",
     "                # inf_machine.filter_out_freqs(freq_ranges=bad_freqs)\n",
-    "\n",
-    "                inf_machine.add_geometry([dists_cm[0], dists_cm[-1]], WALL_ANGLE_DEG)\n",
     "                \n",
     "                t1 = time.time()\n",
     "                for mic_idx in mics:\n",
     "                    dist, prob_mic, diff = inf_machine.do_inference(algorithm, mic_idx)\n",
     "                    distance_estimator.add_distribution(diff * 1e-2, prob_mic, mic_idx)\n",
     "\n",
-    "                d_m, prob = distance_estimator.get_distance_distribution(\n",
+    "                __, prob = distance_estimator.get_distance_distribution(\n",
     "                    distances_m=dists_cm * 1e-2, verbose=False, azimuth_deg=azimuth_deg,\n",
     "                )\n",
     "                time_single += int(1000*(time.time() - t1))\n",
@@ -1185,7 +1184,7 @@
     "\n",
     "                t1 = time.time()\n",
     "                moving_estimator.add_distributions(\n",
-    "                    dist_cm=d_m * 1e2, dist_p=prob, position_cm=positions_cm[i], rot_deg=yaws_deg[i]\n",
+    "                    dist_cm=dists_cm, dist_p=prob, position_cm=positions_cm[i], rot_deg=yaws_deg[i]\n",
     "                )\n",
     "                __, prob_moving = moving_estimator.get_distance_distribution(\n",
     "                    distances_cm=dists_cm\n",
