First working version

--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -789,15 +789,16 @@
     "def extract_valid(row):\n",
     "    positions_cm, yaws_deg = get_positions_flying(row, start_distance_cm=95)\n",
     "    freqs = row.frequencies_matrix[0, :]\n",
-    "    values = np.abs(row.stft)[..., freqs>0]\n",
+    "    values = np.abs(row.stft)[..., freqs>0] # n_times x n_mics x freqs\n",
     "    distances = positions_cm[:, 1]\n",
     "    freqs_valid = freqs[freqs>0]\n",
     "    \n",
     "    forward_indices = np.ones(len(distances), dtype=bool)\n",
     "    #print(\"all\", len(distances))\n",
-    "    forward_indices[1:] &= (distances[1:] - distances[:-1] <= 0)\n",
+    "    #forward_indices[1:] &= (distances[1:] - distances[:-1] <= 0)\n",
     "    #print(\"forward:\", np.sum(forward_indices))\n",
     "    forward_indices &= positions_cm[:, 2] > 30\n",
+    "    print(forward_indices)\n",
     "    #print(\"flying:\", np.sum(forward_indices))\n",
     "    means = np.sum(np.mean(values, axis=-1), axis=-1)\n",
     "    crashs = np.where((means - np.mean(means)) > (2 * np.std(means)))[0]\n",
@@ -847,15 +848,15 @@
     "\n",
     "###### NEW\n",
     "plot_dict = [\n",
-    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_1\"},\n",
+    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_1\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_2\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_3\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_4\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_5\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_6\"},\n",
-    "    {\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_17\"},\n",
-    "    {\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_18\"},\n",
-    "    {\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_19\"},\n",
+    "    #{\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_17\"},\n",
+    "    #{\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_18\"},\n",
+    "    #{\"exp_name\": \"2021_07_14_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_19\"},\n",
     "    #{\"exp_name\": \"2021_07_27_manual\", \"motors\": 0, \"appendix\":\"\", \"end_distance\":15},\n",
     "    #{\"exp_name\": \"2021_07_27_manual\", \"motors\": 0, \"appendix\":\"_3\", \"end_distance\":15},\n",
     "    #{\"exp_name\": \"2021_07_27_manual\", \"motors\": 0, \"appendix\":\"_4\", \"end_distance\":15},\n",
@@ -886,6 +887,7 @@
     "    ax.set_title(f'setup with {azimuth_deg:.0f} degrees, 20cm')\n",
     "    \n",
     "    xvalues, yvalues, values_unsorted, positions_cm, __ = extract_valid(row)\n",
+    "    print(\"magnitudes\", values_unsorted[0].shape, values_unsorted[0])\n",
     "    n_points = values_unsorted.shape[0]\n",
     "    \n",
     "    calib_function = get_calib_function(calib_method)\n",
@@ -1047,6 +1049,8 @@
     "import itertools\n",
     "import time\n",
     "\n",
+    "import pdb;\n",
+    "\n",
     "from plotting_tools import plot_performance\n",
     "\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
@@ -1073,8 +1077,8 @@
     "\n",
     "calib_method_list = [\"on_the_fly\"] #\"stepper\"]\n",
     "# mic_list = [[0], [1], [2], [3]]\n",
-    "mic_list = [[1, 3], [0, 2], [0, 1, 3], [0, 1, 2, 3]]\n",
-    "algorithm_list = [\"bayes\", \"cost\"]\n",
+    "mic_list = [[0, 1, 2, 3]] #[[1, 3], [0, 2], [0, 1, 3], [0, 1, 2, 3]]\n",
+    "algorithm_list = [\"bayes\"]#, \"cost\"]\n",
     "\n",
     "for params in plot_dict:\n",
     "    exp_name, motors, appendix = params.values()\n",
@@ -1087,6 +1091,7 @@
     "    n_points = values_unsorted.shape[0]\n",
     "\n",
     "    calib_on_the_fly = np.median(values_unsorted[:n_calib, :, :], axis=0)\n",
+    "    #print(\"calibration:\", values_unsorted[:n_calib, :, :])\n",
     "    std_values = np.std(values_unsorted[:n_calib, :, :], axis=0)\n",
     "\n",
     "    plot_name_calib = f\"plots/experiments/{exp_name}{appendix}_on_the_fly.pdf\"\n",
@@ -1143,6 +1148,9 @@
     "            time_moving = 0\n",
     "            time_single = 0\n",
     "            for i in range(n_points):\n",
+    "                \n",
+    "                #print(\"magnitudes\", values_unsorted[i])\n",
+    "                #print(\"calib magnitudes\", values_unsorted_calib[i])\n",
     "\n",
     "                if (calib_method == \"on_the_fly\") and (i < n_calib):\n",
     "                    continue\n",
@@ -1218,8 +1226,7 @@
     "                \"time\": time_moving / n_points \n",
     "            }\n",
     "            fig, ax = plot_matrix(dists_cm, results_matrix_moving, d_estimates_moving)\n",
-    "            save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")\n",
-    "\n"
+    "            save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")"
    ]
   },
   {
