Do new analysis

--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -48,7 +48,7 @@
     "        calib_function_median, freqs = get_calibration_function_moving(\n",
     "            \"2021_10_12_flying\", motors=\"linear_buzzer_cont\", fit_one_gain=False,\n",
     "            #\"2021_07_14_flying\", motors=\"linear_buzzer_cont\", fit_one_gain=False,\n",
-    "            appendix_list=[\"_1\", \"_2\", \"_3\"], \n",
+    "            appendix_list=[\"_new3\", \"_new4\", \"_new6\"], \n",
     "        )\n",
     "    elif calib == \"hover\":\n",
     "        print(\"using hovering\")\n",
@@ -193,7 +193,8 @@
     "elif name == \"flying\":\n",
     "#appendix_list=[\"_17\", \"_18\", \"_19\"]\n",
     "    #exp_name = \"2021_07_14_flying\"; motors_list = [\"linear_buzzer_cont\"]; appendix_list=[\"_17\"]\n",
-    "    exp_name = \"2021_10_12_flying\"; motors_list = [\"linear_buzzer_cont\"]; appendix_list = [\"_1\", \"_2\", \"_3\"]\n",
+    "    #exp_name = \"2021_10_12_flying\"; motors_list = [\"linear_buzzer_cont\"]; appendix_list = [\"_1\", \"_2\", \"_3\"]\n",
+    "    exp_name = \"2021_10_12_flying\"; motors_list = [\"linear_buzzer_cont\"]; appendix_list = [\"_new3\", \"_new4\", \"_new6\"]\n",
     "\n",
     "results_df = pd.read_pickle(f\"../experiments/{exp_name}/all_data.pkl\")\n",
     "\n",
@@ -204,7 +205,7 @@
     "    fig_total, ax_total = plt.subplots()\n",
     "    fig_total.set_size_inches(*SIZE)\n",
     "    get_calibration_function_moving(exp_name, motors=motors, fit_one_gain=False, ax=ax_total, \n",
-    "                                    appendix_list=appendix_list)\n",
+    "                                    appendix_list=appendix_list, verbose=True)\n",
     "    ax_total.set_yscale(\"log\")\n",
     "    ax_total.set_ylim(*YLIM)\n",
     "    ax_total.set_xlim(*XLIM)\n",
@@ -218,7 +219,13 @@
     "        plt.figure()\n",
     "        plt.plot(magnitudes - np.mean(magnitudes))\n",
     "        plt.axhline(2 * np.std(magnitudes))\n",
-    "        crash = np.where((magnitudes - np.mean(magnitudes)) > (2 * np.std(magnitudes)))[0][0]\n",
+    "        crash = np.where((magnitudes - np.mean(magnitudes)) > (2 * np.std(magnitudes)))[0]\n",
+    "        if len(crash) > 0:\n",
+    "            crash = crash[0]\n",
+    "            print('crash at', crash)\n",
+    "        else:\n",
+    "            crash = len(magnitudes) - 1\n",
+    "            print(' no crash')\n",
     "        \n",
     "        fig, axs = plt.subplots(1, len(MICS), sharey=True)\n",
     "        fig.set_size_inches(5*len(MICS), 5)\n",
@@ -789,27 +796,29 @@
     "def extract_valid(row):\n",
     "    positions_cm, yaws_deg = get_positions_flying(row, start_distance_cm=95)\n",
     "    freqs = row.frequencies_matrix[0, :]\n",
+    "    \n",
+    "    print('starting frequencies', row.frequencies_matrix[:, 0])\n",
     "    values = np.abs(row.stft)[..., freqs>0] # n_times x n_mics x freqs\n",
     "    distances = positions_cm[:, 1]\n",
     "    freqs_valid = freqs[freqs>0]\n",
     "    \n",
     "    forward_indices = np.ones(len(distances), dtype=bool)\n",
     "    #print(\"all\", len(distances))\n",
-    "    #forward_indices[1:] &= (distances[1:] - distances[:-1] <= 0)\n",
-    "    #print(\"forward:\", np.sum(forward_indices))\n",
+    "    forward_indices[1:] &= (distances[1:] - distances[:-1] <= 0)\n",
+    "    print(\"forward:\", np.sum(forward_indices))\n",
     "    forward_indices &= positions_cm[:, 2] > 30\n",
-    "    print(forward_indices)\n",
+    "    #print(forward_indices)\n",
     "    #print(\"flying:\", np.sum(forward_indices))\n",
     "    means = np.sum(np.mean(values, axis=-1), axis=-1)\n",
     "    crashs = np.where((means - np.mean(means)) > (2 * np.std(means)))[0]\n",
     "    if len(crashs):\n",
-    "        #print('crashs found:', crashs)\n",
+    "        print('crashs found:', crashs)\n",
     "        forward_indices[crashs[0]:] = 0\n",
     "    else:\n",
-    "        #print('no crashs found')\n",
+    "        print('no crashs found')\n",
     "        pass\n",
     "    \n",
-    "    values = values[forward_indices]\n",
+    "    values = values[forward_indices, :]\n",
     "    distances = distances[forward_indices]\n",
     "    positions_cm = positions_cm[forward_indices, :]\n",
     "    yaws_deg = yaws_deg[forward_indices]\n",
@@ -848,7 +857,10 @@
     "\n",
     "###### NEW\n",
     "plot_dict = [\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_1\"},\n",
+    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_new3\"},\n",
+    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_new4\"},\n",
+    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_new6\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_1\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_2\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_3\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\":\"_4\"},\n",
@@ -880,6 +892,7 @@
     "    results_df = pd.read_pickle(f\"../experiments/{exp_name}/all_data.pkl\")\n",
     "    row = results_df.loc[(results_df.appendix == appendix) & \n",
     "                         (results_df.motors == motors), :].iloc[0]\n",
+    "    print(row.appendix)\n",
     "    \n",
     "    from geometry import Context\n",
     "    c = Context.get_crazyflie_setup()\n",
@@ -1054,13 +1067,20 @@
     "from plotting_tools import plot_performance\n",
     "\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
-    "n_calib = 5\n",
+    "n_calib = 10\n",
     "n_window = 3\n",
     "bad_freqs = []\n",
     "#bad_freqs = [[3500, 3900]]\n",
     "\n",
     "plot_dict = [\n",
-    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_1\"},\n",
+    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_new3\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_new4\"},\n",
+    "    {\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_new6\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_new7\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_new8\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_new10\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_new12\"},\n",
+    "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_1\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_2\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_3\"},\n",
     "    #{\"exp_name\": \"2021_10_12_flying\", \"motors\": \"linear_buzzer_cont\", \"appendix\": \"_4\"},\n",
@@ -1080,6 +1100,7 @@
     "mic_list = [[0, 1, 2, 3]] #[[1, 3], [0, 2], [0, 1, 3], [0, 1, 2, 3]]\n",
     "algorithm_list = [\"bayes\"]#, \"cost\"]\n",
     "\n",
+    "calib = False\n",
     "for params in plot_dict:\n",
     "    exp_name, motors, appendix = params.values()\n",
     "\n",
@@ -1090,7 +1111,9 @@
     "    xvalues, yvalues, values_unsorted, positions_cm, yaws_deg = extract_valid(row)\n",
     "    n_points = values_unsorted.shape[0]\n",
     "\n",
-    "    calib_on_the_fly = np.median(values_unsorted[:n_calib, :, :], axis=0)\n",
+    "    if not calib:\n",
+    "        calib_on_the_fly = np.median(values_unsorted[:n_calib, :, :], axis=0)\n",
+    "        calib = True\n",
     "    #print(\"calibration:\", values_unsorted[:n_calib, :, :])\n",
     "    std_values = np.std(values_unsorted[:n_calib, :, :], axis=0)\n",
     "\n",
@@ -1101,7 +1124,7 @@
     "    for m in range(4):\n",
     "        axs_calib[m].plot(yvalues, values_unsorted[:n_calib, m, :].T, color=f\"C{m}\", marker='o')\n",
     "        axs_calib[m].set_title(f\"mic{m}\")\n",
-    "        axs_calib[4].errorbar(yvalues, calib_values[m], std_values[m], label=f\"mic{m}\")\n",
+    "        axs_calib[4].errorbar(yvalues, calib_on_the_fly[m], std_values[m], label=f\"mic{m}\")\n",
     "        axs_calib[m].set_xlabel(f\"frequency [Hz]\")\n",
     "    axs_calib[4].set_xlabel(f\"frequency [Hz]\")\n",
     "    axs_calib[4].set_title(f\"all mics\")\n",
@@ -1134,6 +1157,7 @@
     "        else:\n",
     "            calib_function = get_calib_function(calib_method)\n",
     "            calib_values = calib_function(yvalues)\n",
+    "        print(calib_values.shape)\n",
     "        values_unsorted_calib = values_unsorted / calib_values\n",
     "\n",
     "        for mics, algorithm in itertools.product(mic_list, algorithm_list):\n",
@@ -1152,8 +1176,8 @@
     "                #print(\"magnitudes\", values_unsorted[i])\n",
     "                #print(\"calib magnitudes\", values_unsorted_calib[i])\n",
     "\n",
-    "                if (calib_method == \"on_the_fly\") and (i < n_calib):\n",
-    "                    continue\n",
+    "                #if (calib_method == \"on_the_fly\") and (i < n_calib):\n",
+    "                #    continue\n",
     "\n",
     "                # important to reinitialize!\n",
     "                distance_estimator = DistanceEstimator()\n",
@@ -1179,9 +1203,10 @@
     "                    dist, prob_mic, diff = inf_machine.do_inference(algorithm, mic_idx)\n",
     "                    distance_estimator.add_distribution(diff * 1e-2, prob_mic, mic_idx)\n",
     "\n",
-    "                __, prob = distance_estimator.get_distance_distribution(\n",
+    "                d_m, prob = distance_estimator.get_distance_distribution(\n",
     "                    distances_m=dists_cm * 1e-2, verbose=False, azimuth_deg=azimuth_deg,\n",
     "                )\n",
+    "                np.testing.assert_allclose(d_m*1e2, dists_cm)\n",
     "                time_single += int(1000*(time.time() - t1))\n",
     "\n",
     "                # TODO(FD): maybe remove requirement to have angle distribution\n",
@@ -1194,9 +1219,10 @@
     "                moving_estimator.add_distributions(\n",
     "                    dist_cm=dists_cm, dist_p=prob, position_cm=positions_cm[i], rot_deg=yaws_deg[i]\n",
     "                )\n",
-    "                __, prob_moving = moving_estimator.get_distance_distribution(\n",
+    "                test_cm, prob_moving = moving_estimator.get_distance_distribution(\n",
     "                    distances_cm=dists_cm\n",
     "                )\n",
+    "                np.testing.assert_allclose(test_cm, dists_cm)\n",
     "                time_moving += int(1000*(time.time() - t1))\n",
     "                \n",
     "                results_matrix_moving[:, i] = prob_moving \n",
@@ -1236,7 +1262,7 @@
    "outputs": [],
    "source": [
     "fname = f'../experiments/{exp_name}/results.pkl'\n",
-    "errors_df.to_pickle(fname)\n",
+    "#errors_df.to_pickle(fname)\n",
     "print('saved as', fname)"
    ]
   },
