--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -1144,6 +1144,9 @@
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
     "    plot_positions(ax, positions_cm)\n",
+    "    save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")\n",
+    "    plot_name = f\"plots/experiments/{exp_name}{appendix}_positions.pdf\"\n",
+    "    save_fig(fig, plot_name)\n",
     "\n",
     "    inf_machine = Inference()\n",
     "    dists_cm = DistanceEstimator.DISTANCES_M * 1e2\n",
