Generate final results

--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -1027,7 +1027,7 @@
     "    )\n",
     "    ax.set_ylim(min(dists_cm), max(dists_cm))\n",
     "    add_colorbar(fig, ax, im, title=\"log-probability\")\n",
-    "    ax.set_title(f\"appendix{appendix}, {n_points} measurements\")\n",
+    "    #ax.set_title(f\"appendix{appendix}, {n_points} measurements\")\n",
     "    ax.scatter(\n",
     "        np.arange(n_points) + 0.5,\n",
     "        d_estimates,\n",
@@ -1067,8 +1067,8 @@
     "from plotting_tools import plot_performance\n",
     "\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
-    "n_calib = 10\n",
-    "n_window = 3\n",
+    "n_calib = 5\n",
+    "n_window = 5\n",
     "bad_freqs = []\n",
     "#bad_freqs = [[3500, 3900]]\n",
     "\n",
@@ -1096,9 +1096,10 @@
     ")\n",
     "\n",
     "calib_method_list = [\"on_the_fly\"] #\"stepper\"]\n",
+    "#calib_method_list = [\"stepper\"]\n",
     "# mic_list = [[0], [1], [2], [3]]\n",
     "mic_list = [[0, 1, 2, 3]] #[[1, 3], [0, 2], [0, 1, 3], [0, 1, 2, 3]]\n",
-    "algorithm_list = [\"bayes\"]#, \"cost\"]\n",
+    "algorithm_list = [\"cost\"] #[\"bayes\"]#, \"cost\"]\n",
     "\n",
     "calib = False\n",
     "for params in plot_dict:\n",
@@ -1113,7 +1114,7 @@
     "\n",
     "    if not calib:\n",
     "        calib_on_the_fly = np.median(values_unsorted[:n_calib, :, :], axis=0)\n",
-    "        calib = True\n",
+    "        #calib = True\n",
     "    #print(\"calibration:\", values_unsorted[:n_calib, :, :])\n",
     "    std_values = np.std(values_unsorted[:n_calib, :, :], axis=0)\n",
     "\n",
@@ -1144,7 +1145,6 @@
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
     "    plot_positions(ax, positions_cm)\n",
-    "    save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")\n",
     "    plot_name = f\"plots/experiments/{exp_name}{appendix}_positions.pdf\"\n",
     "    save_fig(fig, plot_name)\n",
     "\n",
@@ -1265,7 +1265,7 @@
    "outputs": [],
    "source": [
     "fname = f'../experiments/{exp_name}/results.pkl'\n",
-    "#errors_df.to_pickle(fname)\n",
+    "errors_df.to_pickle(fname)\n",
     "print('saved as', fname)"
    ]
   },
