Create final heatmap plots

--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -1004,7 +1004,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_matrix(dists_cm, results_matrix, d_estimates):\n",
+    "def plot_matrix(dists_cm, results_matrix, d_estimates, no_deco=False):\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(2 * FIGSIZE, FIGSIZE)\n",
     "    im = pcolorfast_custom(\n",
@@ -1014,27 +1014,36 @@
     "        np.log10(results_matrix),\n",
     "        vmin=-3,\n",
     "    )\n",
-    "    ax.set_xticklabels(np.round(xvalues, 1), rotation=90)\n",
-    "    ax.set_ylabel(\"estimated distance [cm]\")\n",
-    "    ax.set_xlabel(\"real distance [cm]\")\n",
-    "    ax.set_yticks(np.arange(min(dists_cm), max(dists_cm), step=10))\n",
-    "    ax.set_yticklabels(np.arange(min(dists_cm), max(dists_cm), step=10).astype(int))\n",
     "    ax.plot(\n",
     "        np.arange(n_points) + 0.5,\n",
     "        xvalues,\n",
-    "        color=\"C1\",\n",
+    "        color=\"white\",\n",
     "        label=\"ground truth\",\n",
+    "        marker='x'\n",
     "    )\n",
     "    ax.set_ylim(min(dists_cm), max(dists_cm))\n",
-    "    add_colorbar(fig, ax, im, title=\"log-probability\")\n",
-    "    #ax.set_title(f\"appendix{appendix}, {n_points} measurements\")\n",
-    "    ax.scatter(\n",
+    "    ax.plot(\n",
     "        np.arange(n_points) + 0.5,\n",
     "        d_estimates,\n",
-    "        color=\"C1\",\n",
+    "        color=\"white\",\n",
     "        label=\"estimates\",\n",
+    "        marker='o',\n",
+    "        ls='-'\n",
     "    )\n",
-    "    ax.legend()\n",
+    "    if not no_deco:\n",
+    "        add_colorbar(fig, ax, im, title=\"log-probability\")\n",
+    "        ax.set_ylabel(\"estimated distance [cm]\")\n",
+    "        ax.set_xlabel(\"real distance [cm]\")\n",
+    "        ax.set_title(f\"appendix{appendix}, {n_points} measurements\")\n",
+    "        leg = ax.legend(framealpha=0, loc='upper right')\n",
+    "        for text in leg.get_texts():\n",
+    "            plt.setp(text, color='w')\n",
+    "        ax.set_xticklabels(np.round(xvalues, 1), rotation=90)\n",
+    "        ax.set_yticks(np.arange(min(dists_cm), max(dists_cm), step=10))\n",
+    "        ax.set_yticklabels(np.arange(min(dists_cm), max(dists_cm), step=10).astype(int))\n",
+    "    else:\n",
+    "        ax.set_yticks([])\n",
+    "        ax.set_xticks([])\n",
     "    return fig, ax\n",
     "\n",
     "def get_estimates(results_matrix, dists_cm):\n",
@@ -1061,14 +1070,21 @@
     "from copy import deepcopy\n",
     "import itertools\n",
     "import time\n",
+    "from matplotlib.patches import Rectangle\n",
     "\n",
     "import pdb;\n",
     "\n",
     "from plotting_tools import plot_performance\n",
     "\n",
+    "def add_rect(ax, width, height, no_deco=False):\n",
+    "    rect = Rectangle((0, 0), width, height, facecolor='white', alpha=0.5)\n",
+    "    ax.add_patch(rect)\n",
+    "    if not no_deco:\n",
+    "        ax.text(width/2, height/4, \"used for\\ncalibration\", fontdict={'color':'white', 'ha':'center'})\n",
+    "\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
     "n_calib = 5\n",
-    "n_window = 5\n",
+    "n_window = 3\n",
     "bad_freqs = []\n",
     "#bad_freqs = [[3500, 3900]]\n",
     "\n",
@@ -1095,11 +1111,12 @@
     "    columns=[\"algorithm\", \"mics\", \"calib_method\", \"estimates\", \"distances\", \"appendix\", \"time\"]\n",
     ")\n",
     "\n",
-    "calib_method_list = [\"on_the_fly\"] #\"stepper\"]\n",
+    "calib_method_list = [\"on_the_fly\"] \n",
     "#calib_method_list = [\"stepper\"]\n",
     "# mic_list = [[0], [1], [2], [3]]\n",
     "mic_list = [[0, 1, 2, 3]] #[[1, 3], [0, 2], [0, 1, 3], [0, 1, 2, 3]]\n",
-    "algorithm_list = [\"cost\"] #[\"bayes\"]#, \"cost\"]\n",
+    "algorithm_list = [\"bayes\"]#, \"cost\"]\n",
+    "no_deco = True\n",
     "\n",
     "calib = False\n",
     "for params in plot_dict:\n",
@@ -1160,7 +1177,6 @@
     "        else:\n",
     "            calib_function = get_calib_function(calib_method)\n",
     "            calib_values = calib_function(yvalues)\n",
-    "        print(calib_values.shape)\n",
     "        values_unsorted_calib = values_unsorted / calib_values\n",
     "\n",
     "        for mics, algorithm in itertools.product(mic_list, algorithm_list):\n",
@@ -1191,7 +1207,7 @@
     "                #if i < (n_points - 1):\n",
     "                #    rel_dist = xvalues[i+1] - xvalues[i]\n",
     "                #else:\n",
-    "                rel_dist = 2\n",
+    "                rel_dist = 5\n",
     "                inf_machine.add_data(\n",
     "                    values_unsorted_calib[i],\n",
     "                    yvalues,\n",
@@ -1199,7 +1215,7 @@
     "                )\n",
     "                \n",
     "                # TODO(FD) check again if this helps...\n",
-    "                # inf_machine.filter_out_freqs(freq_ranges=bad_freqs)\n",
+    "                inf_machine.filter_out_freqs(freq_ranges=bad_freqs)\n",
     "                \n",
     "                t1 = time.time()\n",
     "                for mic_idx in mics:\n",
@@ -1241,7 +1257,9 @@
     "                \"appendix\": appendix,\n",
     "                \"time\": time_single / n_points \n",
     "            }\n",
-    "            fig, ax = plot_matrix(dists_cm, results_matrix, d_estimates)\n",
+    "            fig, ax = plot_matrix(dists_cm, results_matrix, d_estimates, no_deco=no_deco)\n",
+    "            if calib_method == 'on_the_fly':\n",
+    "                add_rect(ax, n_calib, max(dists_cm), no_deco=no_deco)\n",
     "            save_fig(fig, plot_name + \"_probabilities.pdf\")\n",
     "\n",
     "            d_estimates_moving = get_estimates(results_matrix_moving, dists_cm)\n",
@@ -1254,7 +1272,9 @@
     "                \"appendix\": appendix,\n",
     "                \"time\": time_moving / n_points \n",
     "            }\n",
-    "            fig, ax = plot_matrix(dists_cm, results_matrix_moving, d_estimates_moving)\n",
+    "            fig, ax = plot_matrix(dists_cm, results_matrix_moving, d_estimates_moving, no_deco=no_deco)\n",
+    "            if calib_method == 'on_the_fly':\n",
+    "                add_rect(ax, n_calib, max(dists_cm), no_deco=no_deco)\n",
     "            save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")"
    ]
   },
