--- a/python/WallPreAnalysis.ipynb
+++ b/python/WallPreAnalysis.ipynb
@@ -1084,7 +1084,7 @@
     "\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
     "n_calib = 5\n",
-    "n_window = 5\n",
+    "n_window = 3\n",
     "bad_freqs = []\n",
     "#bad_freqs = [[3500, 3900]]\n",
     "\n",
@@ -1111,12 +1111,12 @@
     "    columns=[\"algorithm\", \"mics\", \"calib_method\", \"estimates\", \"distances\", \"appendix\", \"time\"]\n",
     ")\n",
     "\n",
-    "calib_method_list = [\"on_the_fly\"] \n",
-    "#calib_method_list = [\"stepper\"]\n",
+    "#calib_method_list = [\"on_the_fly\"] \n",
+    "calib_method_list = [\"stepper\"]\n",
     "# mic_list = [[0], [1], [2], [3]]\n",
     "mic_list = [[0, 1, 2, 3]] #[[1, 3], [0, 2], [0, 1, 3], [0, 1, 2, 3]]\n",
     "algorithm_list = [\"bayes\"]#, \"cost\"]\n",
-    "no_deco = False\n",
+    "no_deco = True #False\n",
     "\n",
     "calib = False\n",
     "for params in plot_dict:\n",
