Implementation of all pipelines

--- a/python/WallAnalysis.ipynb
+++ b/python/WallAnalysis.ipynb
@@ -412,7 +412,7 @@
     "max_err = 90 #45\n",
     "axs[1].set_xlim(0,  max_err)\n",
     "axs[0].set_ylim(-max_err, max_err)\n",
-    "save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')\n",
+    "#save_fig(fig, f'{plot_dir}/{fname}_{algo}_distance_slice_performance.pdf')\n",
     "\n",
     "ax_total.legend()"
    ]
