--- a/python/FlyingAnalysis.ipynb
+++ b/python/FlyingAnalysis.ipynb
@@ -558,13 +558,9 @@
     "axs_all = change_order(axs_all, mean_distances)\n",
     "axs_res = change_order(axs_res, mean_distances, ylabel=\"frequency [Hz]\", title=False)\n",
     "\n",
-    "save_fig(fig_df, f\"plots/experiments/{exp_name}_df.png\")  # , extension=\"png\")\n",
-    "save_fig(\n",
-    "    fig_all, f\"plots/experiments/{exp_name}_mics{chosen_mics}_all.png\"\n",
-    ")  # , extension=\"png\")\n",
-    "save_fig(\n",
-    "    fig_res, f\"plots/experiments/{exp_name}_mics{chosen_mics}_res.png\"\n",
-    ")  # , extension=\"png\")"
+    "#save_fig(fig_df, f\"plots/experiments/{exp_name}_df.png\")  # , extension=\"png\")\n",
+    "#save_fig( fig_all, f\"plots/experiments/{exp_name}_mics{chosen_mics}_all.png\" )  # , extension=\"png\")\n",
+    "#save_fig( fig_res, f\"plots/experiments/{exp_name}_mics{chosen_mics}_res.png\" )  # , extension=\"png\")"
    ]
   },
   {
@@ -1016,7 +1012,7 @@
     "\n",
     "        data =  data_collector.get_current_distance_slice(n_max=n_max)\n",
     "        if data is not None:\n",
-    "            d_slices, rel_distances, stds, freqs = data\n",
+    "            d_slices, rel_distances, *_ = data\n",
     "        else:\n",
     "            #print(f'skipping step, cause no measurements yet')\n",
     "            continue \n",
@@ -1035,7 +1031,6 @@
     "\n",
     "        for i_mic, mic_idx in enumerate(mics):\n",
     "            d_slice = d_slices[mic_idx]\n",
-    "            valid = ~np.isnan(d_slice)\n",
     "            angles, proba = get_approach_angle_fft(\n",
     "                d_slice=d_slice,\n",
     "                frequency=freq,\n",
@@ -1051,15 +1046,14 @@
     "        est_angle = get_estimate(angles, probs)\n",
     "        results_matrix[:, i] = probs\n",
     "        \n",
-    "    #valid = np.any(results_matrix > 0, axis=0)\n",
-    "    #results_matrix = results_matrix[:, valid]\n",
     "    distance_idx = np.arange(results_matrix.shape[1])\n",
     "    gt_angle = starting_poses[row.appendix][3]\n",
     "    gt_angle = 90 - gt_angle if gt_angle >= 0 else -gt_angle\n",
     "    \n",
     "    fig, axs = plt.subplots(1, 2)\n",
     "    fig.set_size_inches(10, 3)\n",
-    "    axs[0].pcolorfast(distance_idx, angle_estimator.ANGLES_DEG, np.log10(results_matrix))\n",
+    "    axs[0].pcolorfast(distance_idx, angle_estimator.ANGLES_DEG, results_matrix)\n",
+    "    #axs[0].pcolorfast(distance_idx, angle_estimator.ANGLES_DEG, np.log10(results_matrix))\n",
     "    axs[0].axhline(gt_angle, color='C1')\n",
     "    axs[0].plot(distance_idx, angle_vector, color='C1', ls=':')\n",
     "    axs[0].set_title(f'exp {k}')\n",
