Fix linear pipeline

--- a/python/FlyingAnalysis.ipynb
+++ b/python/FlyingAnalysis.ipynb
@@ -975,11 +975,12 @@
     "\n",
     "mics = [0, 1, 2, 3]\n",
     "n_mics = len(mics)\n",
+    "print('using n_max', n_max)\n",
     "\n",
     "for k,  appendix in enumerate(appendices):\n",
+    "    print(\"appendix\", appendix)\n",
     "    row = df_total[df_total.appendix==appendix].iloc[0]\n",
     "        \n",
-    "    angle_estimator = AngleEstimator()\n",
     "    data_collector = DataCollector(exp_name=exp_name)\n",
     "    \n",
     "    angles = AngleEstimator.ANGLES_DEG\n",
@@ -1003,7 +1004,7 @@
     "            position_cm, signals_f, frequencies, mono_freq=3000, verbose=False\n",
     "        ):\n",
     "            pos_matrix[:, i] = position_cm\n",
-    "            #print('added', position_cm[1])\n",
+    "            #print(\"fillig\", position_cm[1], np.abs(signals_f[0, 15:19]), frequencies[15:19])\n",
     "            data_collector.fill_from_signal(\n",
     "                signals_f, frequencies, distance_cm=position_cm[1], time=row.seconds[i], \n",
     "                #mode=\"maximum\"\n",
@@ -1029,6 +1030,7 @@
     "        plot_mean_angle = mean_angle if mean_angle < 90 else 180 - mean_angle\n",
     "        angle_vector[i] = plot_mean_angle\n",
     "\n",
+    "        angle_estimator = AngleEstimator()\n",
     "        for i_mic, mic_idx in enumerate(mics):\n",
     "            d_slice = d_slices[mic_idx]\n",
     "            angles, proba = get_approach_angle_fft(\n",
